...
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="30" id="9o9-XU-tDw"/>
                                                            <constraint firstAttribute="height" constant="30" id="Zgi-6s-TW0"/>
                                                        </constraints>
                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSn-wI-95m">
                                                        <rect key="frame" x="45.333333333333343" y="36" width="40.666666666666657" height="14.333333333333336"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                        <color key="textColor" systemColor="tintColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e9t-oA-IAw">
...
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="30" id="3bV-w5-hJu"/>
                                                            <constraint firstAttribute="height" constant="30" id="Bo3-Kx-4b8"/>
                                                        </constraints>
                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ir2-1H-Utt">
                                                        <rect key="frame" x="45.333333333333314" y="36" width="40.666666666666657" height="14.333333333333336"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                        <color key="textColor" systemColor="tintColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3aY-1R-2tb">
...
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M17-wP-bni">
                                        <rect key="frame" x="0.0" y="71.333333333333343" width="176.33333333333334" height="34.333333333333343"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Rp.100.000"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                        </userDefinedRuntimeAttributes>
...
