...
    }
    
    
    @IBAction func payAction(_ sender: Any) {
        if self.thisUser?.balance ?? 0 >= self.thisTransaction?.value ?? 0{
            let ac = UIAlertController(title: "Transaction Successful", message: "Yei, you've just made a transaction for Rp.\((self.thisTransaction?.value ?? 0).formatted()).", preferredStyle: .alert)
            ac.addAction(UIAlertAction(title: "Ok", style: .default, handler: { action in
                self.delegate?.payAction(thisTransaction: self.thisTransaction!)
                self.navigationController?.popViewController(animated: true)
            }))
            self.present(ac, animated: true)
        }else{
            let ac = UIAlertController(title: "Insufficient Saldo", message: "Your saldo is insufficient for this transaction.", preferredStyle: .alert)
...
